src/OpenCvSharp.Native/include/open_cv_sharp/features2d/features2d.h

typedef struct jyppx_ocv_features2d_orb jyppx_ocv_features2d_orb;
typedef struct jyppx_ocv_features2d_descriptor_matcher jyppx_ocv_features2d_descriptor_matcher;
typedef struct jyppx_ocv_features2d_bf_matcher jyppx_ocv_features2d_bf_matcher;
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_orb_create(
    int max_features,
    float scale_factor,
    int nlevels,
    int edge_threshold,
    int first_level,
    int wta_k,
    int score_type,
    int patch_size,
    int fast_threshold,
    jyppx_ocv_features2d_orb** orb);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_features2d_orb_release(
    jyppx_ocv_features2d_orb* orb);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_orb_clear(
    jyppx_ocv_features2d_orb* orb);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_orb_empty(
    const jyppx_ocv_features2d_orb* orb,
    int* empty);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_orb_get_max_features(
    const jyppx_ocv_features2d_orb* orb,
    int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_orb_set_max_features(
    jyppx_ocv_features2d_orb* orb,
    int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_orb_get_scale_factor(
    const jyppx_ocv_features2d_orb* orb,
    double* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_orb_set_scale_factor(
    jyppx_ocv_features2d_orb* orb,
    double value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_orb_get_nlevels(
    const jyppx_ocv_features2d_orb* orb,
    int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_orb_set_nlevels(
    jyppx_ocv_features2d_orb* orb,
    int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_orb_get_edge_threshold(
    const jyppx_ocv_features2d_orb* orb,
    int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_orb_set_edge_threshold(
    jyppx_ocv_features2d_orb* orb,
    int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_orb_get_first_level(
    const jyppx_ocv_features2d_orb* orb,
    int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_orb_set_first_level(
    jyppx_ocv_features2d_orb* orb,
    int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_orb_get_wta_k(
    const jyppx_ocv_features2d_orb* orb,
    int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_orb_set_wta_k(
    jyppx_ocv_features2d_orb* orb,
    int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_orb_get_score_type(
    const jyppx_ocv_features2d_orb* orb,
    int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_orb_set_score_type(
    jyppx_ocv_features2d_orb* orb,
    int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_orb_get_patch_size(
    const jyppx_ocv_features2d_orb* orb,
    int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_orb_set_patch_size(
    jyppx_ocv_features2d_orb* orb,
    int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_orb_get_fast_threshold(
    const jyppx_ocv_features2d_orb* orb,
    int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_orb_set_fast_threshold(
    jyppx_ocv_features2d_orb* orb,
    int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_orb_descriptor_size(
    const jyppx_ocv_features2d_orb* orb,
    int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_orb_descriptor_type(
    const jyppx_ocv_features2d_orb* orb,
    int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_orb_default_norm(
    const jyppx_ocv_features2d_orb* orb,
    int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_orb_detect_count(
    const jyppx_ocv_features2d_orb* orb,
    const jyppx_ocv_mat* image,
    const jyppx_ocv_mat* mask,
    int* keypoint_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_orb_detect_fill(
    const jyppx_ocv_features2d_orb* orb,
    const jyppx_ocv_mat* image,
    const jyppx_ocv_mat* mask,
    jyppx_ocv_key_point* keypoints,
    int keypoint_capacity,
    int* keypoint_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_orb_compute(
    const jyppx_ocv_features2d_orb* orb,
    const jyppx_ocv_mat* image,
    const jyppx_ocv_key_point* keypoints_in,
    int keypoint_count,
    jyppx_ocv_key_point* keypoints_out,
    int keypoint_capacity,
    int* written_keypoint_count,
    jyppx_ocv_mat* descriptors);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_orb_detect_and_compute_count(
    const jyppx_ocv_features2d_orb* orb,
    const jyppx_ocv_mat* image,
    const jyppx_ocv_mat* mask,
    const jyppx_ocv_key_point* keypoints_in,
    int keypoint_count,
    int use_provided_keypoints,
    int* output_keypoint_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_orb_detect_and_compute_fill(
    const jyppx_ocv_features2d_orb* orb,
    const jyppx_ocv_mat* image,
    const jyppx_ocv_mat* mask,
    const jyppx_ocv_key_point* keypoints_in,
    int keypoint_count,
    int use_provided_keypoints,
    jyppx_ocv_key_point* keypoints_out,
    int keypoint_capacity,
    int* output_keypoint_count,
    jyppx_ocv_mat* descriptors);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_bf_matcher_create(
    int norm_type,
    int cross_check,
    jyppx_ocv_features2d_bf_matcher** matcher);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_features2d_bf_matcher_release(
    jyppx_ocv_features2d_bf_matcher* matcher);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_bf_matcher_get_norm_type(
    const jyppx_ocv_features2d_bf_matcher* matcher,
    int* norm_type);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_bf_matcher_get_cross_check(
    const jyppx_ocv_features2d_bf_matcher* matcher,
    int* cross_check);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_bf_matcher_is_mask_supported(
    const jyppx_ocv_features2d_bf_matcher* matcher,
    int* supported);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_bf_matcher_empty(
    const jyppx_ocv_features2d_bf_matcher* matcher,
    int* empty);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_bf_matcher_clear(
    jyppx_ocv_features2d_bf_matcher* matcher);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_bf_matcher_train(
    jyppx_ocv_features2d_bf_matcher* matcher);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_bf_matcher_add(
    jyppx_ocv_features2d_bf_matcher* matcher,
    const jyppx_ocv_mat* const* descriptors,
    int descriptor_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_descriptor_matcher_create_by_type(
    int matcher_type,
    jyppx_ocv_features2d_descriptor_matcher** matcher);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_descriptor_matcher_create_by_name(
    const char* matcher_name,
    int matcher_name_length,
    jyppx_ocv_features2d_descriptor_matcher** matcher);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_features2d_descriptor_matcher_release(
    jyppx_ocv_features2d_descriptor_matcher* matcher);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_descriptor_matcher_clone(
    const jyppx_ocv_features2d_descriptor_matcher* matcher,
    int empty_train_data,
    jyppx_ocv_features2d_descriptor_matcher** clone);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_descriptor_matcher_is_mask_supported(
    const jyppx_ocv_features2d_descriptor_matcher* matcher,
    int* supported);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_descriptor_matcher_empty(
    const jyppx_ocv_features2d_descriptor_matcher* matcher,
    int* empty);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_descriptor_matcher_clear(
    jyppx_ocv_features2d_descriptor_matcher* matcher);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_descriptor_matcher_train(
    jyppx_ocv_features2d_descriptor_matcher* matcher);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_descriptor_matcher_add(
    jyppx_ocv_features2d_descriptor_matcher* matcher,
    const jyppx_ocv_mat* const* descriptors,
    int descriptor_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_descriptor_matcher_get_train_descriptors_count(
    const jyppx_ocv_features2d_descriptor_matcher* matcher,
    int* descriptor_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_descriptor_matcher_get_train_descriptor_clone(
    const jyppx_ocv_features2d_descriptor_matcher* matcher,
    int index,
    jyppx_ocv_mat** descriptor);