src/OpenCvSharp/Internal/Interop/NativeMethods.Features2D.LibraryImport.cs

#if NET7_0_OR_GREATER
using System;
using System.Runtime.InteropServices;

namespace JYPPX.OpenCvSharp.Internal.Interop
{
    internal static unsafe partial class NativeMethods
    {
        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_create")]
        internal static partial int Features2DOrbCreate(int maxFeatures, float scaleFactor, int nLevels, int edgeThreshold, int firstLevel, int wtaK, int scoreType, int patchSize, int fastThreshold, out IntPtr orb);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_release")]
        internal static partial void Features2DOrbRelease(IntPtr orb);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_clear")]
        internal static partial int Features2DOrbClear(IntPtr orb);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_empty")]
        internal static partial int Features2DOrbEmpty(IntPtr orb, out int empty);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_get_max_features")]
        internal static partial int Features2DOrbGetMaxFeatures(IntPtr orb, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_set_max_features")]
        internal static partial int Features2DOrbSetMaxFeatures(IntPtr orb, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_get_scale_factor")]
        internal static partial int Features2DOrbGetScaleFactor(IntPtr orb, out double value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_set_scale_factor")]
        internal static partial int Features2DOrbSetScaleFactor(IntPtr orb, double value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_get_nlevels")]
        internal static partial int Features2DOrbGetNLevels(IntPtr orb, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_set_nlevels")]
        internal static partial int Features2DOrbSetNLevels(IntPtr orb, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_get_edge_threshold")]
        internal static partial int Features2DOrbGetEdgeThreshold(IntPtr orb, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_set_edge_threshold")]
        internal static partial int Features2DOrbSetEdgeThreshold(IntPtr orb, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_get_first_level")]
        internal static partial int Features2DOrbGetFirstLevel(IntPtr orb, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_set_first_level")]
        internal static partial int Features2DOrbSetFirstLevel(IntPtr orb, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_get_wta_k")]
        internal static partial int Features2DOrbGetWtaK(IntPtr orb, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_set_wta_k")]
        internal static partial int Features2DOrbSetWtaK(IntPtr orb, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_get_score_type")]
        internal static partial int Features2DOrbGetScoreType(IntPtr orb, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_set_score_type")]
        internal static partial int Features2DOrbSetScoreType(IntPtr orb, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_get_patch_size")]
        internal static partial int Features2DOrbGetPatchSize(IntPtr orb, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_set_patch_size")]
        internal static partial int Features2DOrbSetPatchSize(IntPtr orb, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_get_fast_threshold")]
        internal static partial int Features2DOrbGetFastThreshold(IntPtr orb, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_set_fast_threshold")]
        internal static partial int Features2DOrbSetFastThreshold(IntPtr orb, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_descriptor_size")]
        internal static partial int Features2DOrbDescriptorSize(IntPtr orb, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_descriptor_type")]
        internal static partial int Features2DOrbDescriptorType(IntPtr orb, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_default_norm")]
        internal static partial int Features2DOrbDefaultNorm(IntPtr orb, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_detect_count")]
        internal static partial int Features2DOrbDetectCount(IntPtr orb, IntPtr image, IntPtr mask, out int keypointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_detect_fill")]
        internal static partial int Features2DOrbDetectFill(IntPtr orb, IntPtr image, IntPtr mask, NativeKeyPoint* keypoints, int keypointCapacity, out int keypointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_compute")]
        internal static partial int Features2DOrbCompute(IntPtr orb, IntPtr image, NativeKeyPoint* keypointsIn, int keypointCount, NativeKeyPoint* keypointsOut, int keypointCapacity, out int writtenKeypointCount, IntPtr descriptors);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_detect_and_compute_count")]
        internal static partial int Features2DOrbDetectAndComputeCount(IntPtr orb, IntPtr image, IntPtr mask, NativeKeyPoint* keypointsIn, int keypointCount, int useProvidedKeypoints, out int outputKeypointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_detect_and_compute_fill")]
        internal static partial int Features2DOrbDetectAndComputeFill(IntPtr orb, IntPtr image, IntPtr mask, NativeKeyPoint* keypointsIn, int keypointCount, int useProvidedKeypoints, NativeKeyPoint* keypointsOut, int keypointCapacity, out int outputKeypointCount, IntPtr descriptors);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_create")]
        internal static partial int Features2DBFMatcherCreate(int normType, int crossCheck, out IntPtr matcher);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_release")]
        internal static partial void Features2DBFMatcherRelease(IntPtr matcher);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_get_norm_type")]
        internal static partial int Features2DBFMatcherGetNormType(IntPtr matcher, out int normType);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_get_cross_check")]
        internal static partial int Features2DBFMatcherGetCrossCheck(IntPtr matcher, out int crossCheck);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_is_mask_supported")]
        internal static partial int Features2DBFMatcherIsMaskSupported(IntPtr matcher, out int supported);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_empty")]
        internal static partial int Features2DBFMatcherEmpty(IntPtr matcher, out int empty);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_clear")]
        internal static partial int Features2DBFMatcherClear(IntPtr matcher);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_train")]
        internal static partial int Features2DBFMatcherTrain(IntPtr matcher);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_add")]
        internal static partial int Features2DBFMatcherAdd(IntPtr matcher, IntPtr* descriptors, int descriptorCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_descriptor_matcher_create_by_type")]
        internal static partial int Features2DDescriptorMatcherCreateByType(int matcherType, out IntPtr matcher);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_descriptor_matcher_create_by_name")]
        internal static partial int Features2DDescriptorMatcherCreateByName(byte* matcherName, int matcherNameLength, out IntPtr matcher);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_descriptor_matcher_release")]
        internal static partial void Features2DDescriptorMatcherRelease(IntPtr matcher);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_descriptor_matcher_clone")]
        internal static partial int Features2DDescriptorMatcherClone(IntPtr matcher, int emptyTrainData, out IntPtr clone);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_descriptor_matcher_is_mask_supported")]
        internal static partial int Features2DDescriptorMatcherIsMaskSupported(IntPtr matcher, out int supported);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_descriptor_matcher_empty")]
        internal static partial int Features2DDescriptorMatcherEmpty(IntPtr matcher, out int empty);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_descriptor_matcher_clear")]
        internal static partial int Features2DDescriptorMatcherClear(IntPtr matcher);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_descriptor_matcher_train")]
        internal static partial int Features2DDescriptorMatcherTrain(IntPtr matcher);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_descriptor_matcher_add")]
        internal static partial int Features2DDescriptorMatcherAdd(IntPtr matcher, IntPtr* descriptors, int descriptorCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_descriptor_matcher_get_train_descriptors_count")]
        internal static partial int Features2DDescriptorMatcherGetTrainDescriptorsCount(IntPtr matcher, out int descriptorCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_descriptor_matcher_get_train_descriptor_clone")]
        internal static partial int Features2DDescriptorMatcherGetTrainDescriptorClone(IntPtr matcher, int index, out IntPtr descriptor);
